<resources>
    <string name="app_name">My movies</string>
    <string name="email_field">*Usuario</string>
    <string name="password_field">*Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="title_profile">Perfil</string>
    <string name="title_cinema">Cartelera</string>
    <string name="app_welcome">Bienvenido:</string>
    <string name="app_email">Correo electrónico:</string>
    <string name="app_card">Tarjeta:</string>
    <string name="cardNumber_field">Número de tarjeta Club Cinépolis</string>
    <string name="search">Consultar</string>
    <string name="name">Nombre:</string>
    <string name="rate">Clasificación</string>
    <string name="gne">Género</string>
    <string name="time">Duración</string>
    <string name="syno">Sinopsis</string>
    <string name="try_again">Intentar de nuevo</string>
    <string name="cinema_number">Número de cinema</string>
    <string name="pin_field">Pin</string>
    <string name="put_cardNumer_pin">Debe ingresar los campos de número de tarjeta y pin</string>
    <string name="title_share">Share</string>
</resources>